--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -11,11 +11,11 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2vmin;
+  padding: 1vmin;
   font-size: 2vh;
   color: lightslategray;
   margin: 0;
-  min-width: 640px;
+  min-width: 660px;
 }
 
 footer {
@@ -24,11 +24,11 @@ footer {
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
   justify-items: center;
-  padding: 2vmin;
+  padding: 1vmin;
   font-size: 2vh;
   color: lightslategray;
   margin: 0;
-  min-width: 640px;
+  min-width: 660px;
 }
 
 nav a {
@@ -37,11 +37,11 @@ nav a {
   background-color: white;
   padding: 1vmin;
   border-radius: 1vmin;
-
   &:hover {
     color: gray;
     background-color: lightslategray;
     color: white;
+    font-size: 20px;
   }
 }
 
