--- a/views/taco-stands/show.ejs
+++ b/views/taco-stands/show.ejs
@@ -6,34 +6,31 @@
   <div class="rating"><%= ratingD %> (<%=average%>, <%= avgRating.length %> reviews)</div>
   <% } else { %>
   <div class="rating">(No ratings yet)</div>
-<% } %>
-
-<div class="details">
-    <ul>
-      <li>
-        <u>Price</u>: <%= currentStand.price %>
-      </li>
-      <li>
-        <u>City</u>: <%= currentStand.city %>
-      </li>
-      <li>
-        <u>Days Open</u>: 
-        <% currentStand.day.forEach((day) => { %>
-        <ul><li><%= day %></li></ul>
-      <% }) %>
-        <li><u>Hours</u>: <%= `${currentStand.hour[0]}${currentStand.hour[1]} - ${currentStand.hour[2]}${currentStand.hour[3]}`%></li>
-      </ul>
-  </li>
-</div>
-
-<div class="edit">
-  <% if (user && currentStand.owner.toString() === user._id.toString()) { %>
-    <a href="/taco-stands/<%= currentStand._id %>/edit"><button>Edit Taco Stand</button></a>
-    <form action="/taco-stands/<%= currentStand._id %>?_method=DELETE" method="POST">
-      <button type="submit">Delete Taco Stand</button>
-    </form>
   <% } %>
+<div id="price"><%= currentStand.price %></div>
+    
+<div class="details">
+  <ul>
+    <li>
+      <u>City</u>: <%= currentStand.city %>
+    </li>
+    <li>
+      <u>Days Open</u>: 
+      <% currentStand.day.forEach((day) => { %>
+      <ul><li><%= day %> (<%= `${currentStand.hour[0]}${currentStand.hour[1]} - ${currentStand.hour[2]}${currentStand.hour[3]}`%>)</li></ul>
+    <% }) %>
+    </ul>
+  </li>
+  <div class="edit">
+    <% if (user && currentStand.owner.toString() === user._id.toString()) { %>
+      <a href="/taco-stands/<%= currentStand._id %>/edit"><button>Edit Taco Stand</button></a>
+      <form action="/taco-stands/<%= currentStand._id %>?_method=DELETE" method="POST">
+        <button type="submit">Delete Taco Stand</button>
+      </form>
+    <% } %>
+  </div>
 </div>
+
 
 <br>
 <h3><u>Reviews</u>:</h3>
@@ -52,11 +49,13 @@
         <%= new Date(review.updatedAt).toLocaleString() %><br>
       <% } %>
       <% if (user && user.username === review.username) { %>
-        <a href="/taco-stands/<%= currentStand._id %>/reviews/edit"><button>Edit Review</button></a>
-        <form action="/taco-stands/<%= currentStand._id %>/reviews?_method=DELETE" method="POST">
+        <div class="editB-container">
+        <a href="/taco-stands/<%= currentStand._id %>/reviews/edit" class="editB"><button class="editR">Edit Review</button></a>
+        <form action="/taco-stands/<%= currentStand._id %>/reviews?_method=DELETE" method="POST" class="editB">
           <input type="hidden" name="reviewId" value="<%= review._id %>">
-          <button type="submit">Delete Review</button>
+          <button type="submit" class="editR">Delete Review</button>
         </form>
+      </div>
         <% } %>
       </div>
     <div class="comment">
