--- a/public/css/allstands.css
+++ b/public/css/allstands.css
@@ -1,3 +1,7 @@
+body {
+  background-color: lightpink;
+}
+
 .stands {
   display: grid;
   grid-template-columns: 50vh 50vh;
@@ -10,20 +14,6 @@
   border: 1px solid black; 
   padding: 10px;
   margin: 0;
-}
-
-button {
-  text-decoration: none;
-  color: black;
-  background-color: white;
-  padding: 1vmin;
-  border-radius: 1vmin;
-
-  &:hover {
-    color: gray;
-    background-color: lightslategray;
-    color: white;
-  }
 }
 
 .name {
@@ -47,4 +37,20 @@ div {
 
 .new {
   text-align: center;
+}
+
+button {
+  text-decoration: none;
+  color: slategray;
+  background-color: white;
+  padding: 1.5vmin;
+  border-radius: 1vmin;
+  cursor: pointer;
+  border: none;
+  &:hover {
+    color: gray;
+    background-color: lightslategray;
+    color: white;
+    font-size: 20px;
+  }
 }
