Complete new.css and added price form validation for new and edit

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,10 +10,12 @@
     <div>
       <a href="/auth/sign-up"><button class="login">Sign Up!</button></a>
       <a href="/auth/sign-in"><button class="login">Log In</button></a>
-  <% } else { %>
-      <a href="/users"><button class="login">Our Community</button></a>
-  <% } %>
     </div>
+  <% } else { %>
+    <div>
+      <a href="/users"><button class="login">Our Community</button></a>
+    </div>
+  <% } %>
   
   <p id="tagline">Savor authentic tacos while supporting your community!</p>
 </div>
