Sorted .css files and added proper locations

--- a/views/taco-stands/edit.ejs
+++ b/views/taco-stands/edit.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header.ejs') %>
 
-<link rel="stylesheet" href="/css/edit.css">
+<link rel="stylesheet" href="/css/tacostands/edit.css">
 
 <form action="/taco-stands/<%= stand._id %>?_method=PUT" method="POST">
   
