--- a/views/taco-stands/home.ejs
+++ b/views/taco-stands/home.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header.ejs') %>
 
-<link rel="stylesheet" href="/css/allstands.css">
+<link rel="stylesheet" href="/css/tacostands/allstands.css">
 
 <div class="stands">
   <p class="header">Name</p>
