--- a/views/taco-stands/new.ejs
+++ b/views/taco-stands/new.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header.ejs') %>
 
-<link rel="stylesheet" href="/css/new.css">
+<link rel="stylesheet" href="/css/tacostands/new.css">
 
 <form action="/taco-stands" method="POST">
   
