--- a/views/taco-stands/show.ejs
+++ b/views/taco-stands/show.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header.ejs') %>
 
-<link rel="stylesheet" href="/css/show.css">
+<link rel="stylesheet" href="/css/tacostands/show.css">
 
 <% if (avgRating.length > 0) { %>
   <div class="rating"><%= ratingD %> (<%=average%>, <%= avgRating.length %> reviews)</div>
