--- a/views/reviews/new.ejs
+++ b/views/reviews/new.ejs
@@ -1,5 +1,7 @@
 <%- include('../partials/header.ejs') %>
 
+<link rel="stylesheet" href="/css/reviews/new.css">
+
 <form action="/taco-stands/<%= stand._id %>/reviews" method="POST">
 
   <label for="rating">Rating (1-5): </label>
