--- a/public/css/users/show.css
+++ b/public/css/users/show.css
@@ -2,6 +2,10 @@ body {
   background-color: lightpink;
 }
 
+h1 {
+  margin: 20px;
+}
+
 button {
   text-decoration: none;
   color: black;
@@ -18,31 +22,13 @@ button {
   }
 }
 
-main {
-  display: flex;
+.stands {
+  display: grid;
   flex-direction: column;
+  grid-template-columns: auto;
+  gap: 2vmin;
+  justify-content: center;
   align-items: center;
   margin-top: 5vmin;
   margin-bottom: 5vmin;
-}
-
-form {
-  display: grid;
-  grid-template-columns: auto auto;
-  gap: 2vmin;
-}
-
-form * {
-  padding: 1vmin;
-  border-radius: 1vmin;
-}
-
-input,
-textarea,
-select {
-  border: 0.3vmin solid black;
-}
-
-form button[type='submit'] {
-  grid-column: span 2;
 }
