--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -1,5 +1,7 @@
 <%- include('../partials/header.ejs') %>
 
+<link rel="stylesheet" href="/css/auth/login.css">
+
 <form action="/auth/sign-in" method="POST">
   <label for="username">Username:</label>
   <input type="text" name="username" id="username" />
