--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -1,8 +1,10 @@
 <%- include('../partials/header.ejs') %>
 
+<link rel="stylesheet" href="/css/auth/signup.css">
+
 <form action="/auth/sign-up" method="POST">
   <label for="username">Username:</label>
-  <input type="text" name="username" id="username" />
+  <input type="email" name="username" id="username" />
   <label for="password">Password:</label>
   <input type="password" name="password" id="password" />
   <label for="confirmPassword">Confirm Password:</label>
