Changed to correct file structure in home.ejs

--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header.ejs') %>
 
-<link rel="stylesheet" href="/css/users/show.css">
+<link rel="stylesheet" href="/css/users/home.css">
 
 <div class="container">
   <% users.forEach((element) => { %>
