--- a/views/taco-stands/home.ejs
+++ b/views/taco-stands/home.ejs
@@ -25,7 +25,7 @@
 <br>
 <div class="new">
   <% if (user) { %>
-    <a href="/taco-stands/new">Add a new Taco Stand</a>
+    <a href="/taco-stands/new"><button>Add a new Taco Stand</button></a>
   <% } else { %>
     <a href="/auth/sign-in"><button>Log in to add a Taco Stand!</button></a>
     <a href="/auth/sign-up"><button>Sign up to add a Taco Stand!</button></a>
