--- a/public/css/tacostands/show.css
+++ b/public/css/tacostands/show.css
@@ -8,7 +8,7 @@
 
 .reviews {
   display: grid;
-  grid-template-columns: 50vh 50vh;
+  grid-template-columns: 35vh 60vh;
   grid-template-rows: auto;
   justify-content: center; 
   padding: 10px;
@@ -20,14 +20,17 @@ body {
 }
 
 .review-info {
+  border-radius: 10px 0px 0px 10px;
   border-width: 5px 2px 5px 5px; 
   border-style: solid;
   border-color: black;
   padding: 10px;
-  background-color: lightgray;
+  background-color: #fca07c;
+  text-align: center;
 }
 
 .comment {
+  border-radius: 0px 10px 10px 0px;
   border-width: 5px 5px 5px 2px; 
   border-style: solid;
   border-color: black;
@@ -82,6 +85,8 @@ button {
   justify-content: flex-start;
   align-items: center;
   gap: 5px;
+  align-items: center;
+  justify-content: center;
 }
 
 .editR {
