Update community users page

--- a/public/css/users/home.css
+++ b/public/css/users/home.css
@@ -24,4 +24,9 @@ main {
   align-items: center;
   margin-top: 5vmin;
   margin-bottom: 5vmin;
+  font-size: 24px;
+}
+
+.names {
+  margin: 5px;
 }
