--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -3,12 +3,13 @@
 <link rel="stylesheet" href="/css/users/home.css">
 
 <div class="container">
-  <% users.forEach((element) => { %>
-    <div class="names">🌮 <%= element.username %></div>
+  <% users.forEach((element)=> { %>
+    <div class="names">🌮 <%= element.username %>
+    </div>
     <div>
       <a href="/users/<%= element._id%>"><button>View <%= element.username %>'s Taco Stands</button></a>
     </div><br>
-  <% }) %>
+    <% }) %>
 </div>
 
-<%- include('../partials/footer.ejs') %>
+  <%- include('../partials/footer.ejs') %>
