--- a/views/taco-stands/home.ejs
+++ b/views/taco-stands/home.ejs
@@ -5,31 +5,33 @@
 <div class="stands">
   <p class="header">Name</p>
   <p class="header">Rating</p>
-    <% stands.forEach((element) => { %>
-        <a href="/taco-stands/<%= element._id %>" class="name"><%= element.name %></a> 
-        <% if (element.averageRating !== "No ratings yet") { %>
-          <div class="rating">
-            <% for (let i = 0; i < element.averageRating; i++) { %>
-              🌮
-            <% } %> 
+  <% stands.forEach((element)=> { %>
+    <a href="/taco-stands/<%= element._id %>" class="name">
+      <%= element.name %>
+    </a>
+    <% if (element.averageRating !=="No ratings yet" ) { %>
+      <div class="rating">
+        <% for (let i=0; i < element.averageRating; i++) { %>
+          🌮
+          <% } %>
             (<%= element.numberOfRatings %> reviews)
-          </div>
-        <% } else { %>
-          <div class="noRating">
-            (<%= element.averageRating %>)
-          </div>
+      </div>
+      <% } else { %>
+        <div class="noRating">
+          (<%= element.averageRating %>)
+        </div>
         <% } %>
-      <% }) %>
+          <% }) %>
 </div>
 
 <br>
 <div class="new">
   <% if (user) { %>
     <a href="/taco-stands/new"><button>Add a new Taco Stand</button></a>
-  <% } else { %>
-    <a href="/auth/sign-in"><button>Log in to add a Taco Stand!</button></a>
-    <a href="/auth/sign-up"><button>Sign up to add a Taco Stand!</button></a>
-  <% } %>
+    <% } else { %>
+      <a href="/auth/sign-in"><button>Log in to add a Taco Stand!</button></a>
+      <a href="/auth/sign-up"><button>Sign up to add a Taco Stand!</button></a>
+      <% } %>
 </div>
 
-<%- include('../partials/footer.ejs') %>
+  <%- include('../partials/footer.ejs') %>
