--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PopTaco</title>
-  <link rel="stylesheet" href="/css/nav.css">
+  <link rel="stylesheet" href="/css/partials/nav.css">
   <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
   <link rel="icon" type="image/jpg" href="../assets/images/logo.jpg">
 </head>
