--- a/public/css/tacostands/allstands.css
+++ b/public/css/tacostands/allstands.css
@@ -4,10 +4,10 @@ body {
 
 .stands {
   display: grid;
-  grid-template-columns: 50vh 50vh;
+  grid-template-columns: 30vh 30vh 30vh;
   grid-template-rows: auto;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
 
 }
 
@@ -21,10 +21,27 @@ body {
 }
 
 .name {
+  grid-column: 1;
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-size: 22px;
+  font-size: 25px;
+}
+
+.rating {
+  grid-column: 2;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 25px;
+}
+
+.city {
+  grid-column: 3;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 25px;
 }
 
 .header {
@@ -32,7 +49,7 @@ body {
   justify-content: center;
   text-align: center;
   align-items: center;
-  font-size: 24px;
+  font-size: 28px;
 }
 
 div {
