--- a/views/taco-stands/home.ejs
+++ b/views/taco-stands/home.ejs
@@ -19,7 +19,7 @@
           (<%= element.averageRating %>)
         </div>
         <% } %>
-        <div class="city"><%= element.city %></div>
+        <div class="city"><%= element.city %>, <%= element.state.toUpperCase() %></div>
         <% }) %>
 </div>
 
