--- a/views/taco-stands/show.ejs
+++ b/views/taco-stands/show.ejs
@@ -12,7 +12,7 @@
 <div class="details">
   <ul>
     <li>
-      <u>City</u>: <%= currentStand.city %>
+      <u>City</u>: <%= currentStand.city %>, <%= currentStand.state.toUpperCase() %>
     </li>
     <li>
       <u>Street Intersection</u>: <%= `${currentStand.crossroads[0]} & ${currentStand.crossroads[1]}` %>
