--- a/public/css/tacostands/allstands.css
+++ b/public/css/tacostands/allstands.css
@@ -4,7 +4,7 @@ body {
 
 .stands {
   display: grid;
-  grid-template-columns: 30vh 30vh 30vh;
+  grid-template-columns: 30vh 30vh auto;
   grid-template-rows: auto;
   justify-content: center;
   align-items: stretch;
