--- a/public/css/tacostands/show.css
+++ b/public/css/tacostands/show.css
@@ -1,6 +1,6 @@
 .details {
   display: grid;
-  grid-template-columns: 50vh;
+  grid-template-columns: auto;
   grid-template-rows: auto;
   justify-content: center; 
   align-items: center; 
