--- a/views/reviews/new.ejs
+++ b/views/reviews/new.ejs
@@ -5,7 +5,7 @@
 <form action="/taco-stands/<%= stand._id %>/reviews" method="POST">
 
   <label for="rating">Rating (1-5): </label>
-  <input type="text" name="rating" id="rating" min="1" max="5">
+  <input type="number" name="rating" id="rating" min="1" max="5">
 
   <label for="comment">Comment:</label>
   <textarea name="comment" id="comment" required></textarea><br>
